# LTH

./: .travis.yml  README.md  pyproject.toml
notebooks/: minimal_demo.ipynb
src/: layers.py  pruning.py
tests/: test_layers.py  test_pruning.py
