[tool.poetry]
name = "lth"
version = "0.1.0"
description = ""
authors = ["ivallesp"]

[tool.poetry.dependencies]
python = "3.7.3"
tensorflow = "^2.2.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
ipykernel = "^5.3.4"
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}
nose = "^1.3.7"
coverage = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
